# Ducki-Duck

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/pet/: page.tsx
src/components/: Agenda.tsx  Banner.tsx  Card.tsx  Clock.tsx  DebugPanel.tsx  Duck.tsx  DuckScene.tsx  PixelKeyboard.tsx
src/hooks/: useBorderWalk.ts  useEggs.ts  useReminders.ts  useTyping.ts  useWebDrag.ts
src/lib/: bark.ts  eggs.ts  notify.ts  platform.ts  quack.ts  reminders.ts  storage.ts
