[package]
name = "ducki-duck"
version = "0.1.0"
description = "The rubber duck that listens and never gives advice — it just quacks."
authors = ["ducki-duck contributors"]
edition = "2021"
rust-version = "1.77.2"

# The Tauri app's Rust entry point lives in lib.rs; main.rs just calls it.
[lib]
name = "ducki_duck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS: raw NSWindow access so the duck can float across every Space and
# over fullscreen apps (Tauri's helpers don't set the full collection behavior).
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
