[package]
name = "ducki-duck"
version = "0.1.0"
description = "The rubber duck that listens and never gives advice — it just quacks."
authors = ["ducki-duck contributors"]
edition = "2021"
rust-version = "1.77.2"

# The Tauri app's Rust entry point lives in lib.rs; main.rs just calls it.
[lib]
name = "ducki_duck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS native bits:
#  - objc: NSWindow collection behavior (float across Spaces / over fullscreen)
#  - core-graphics: global cursor position (so the dog's eyes track anywhere)
#  - rdev: global key-event *timing* for the typing companion (counts only —
#    never records which keys; needs Input Monitoring permission)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.24"
rdev = "0.5"
